--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Github</title>
   </head>
   <body>
     <h1 class="text-center mt-5 display-4 text-primary">Hola a todos con Github</h1>
     <h2 class="text-center mt-5 display-4 text-primary">Visual code a Github</h2>
     <h3 class="text-center mt-5 display-4 text-primary">Testing</h3>
-    
+    Todo lo aprendido
 
     <!-- Optional JavaScript; choose one of the two! -->
 
