--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <h3 class="text-center mt-5 display-4 text-primary">Testing</h3>
     <br>
     <br>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora est nisi saepe, ratione quod qui at nesciunt dolore reprehenderit quas officiis quam iste, ab aliquam corrupti itaque voluptate magnam vitae.</p>
     
-    Todo lo aprendido
 
     <!-- Optional JavaScript; choose one of the two! -->
 
